[package]
name = "lemonsqueezy-store-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
derive = "1.0.0"
dotenvy = "0.15.7"
eyre = "0.6.8"
jsonwebtoken = "9.1.0"
lemonsqueezy = { git = 'https://github.com/sumoduduk/lemonsqueezy.rs.git', branch = 'fix_checkout_data'  }
serde = "1.0.190"
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["postgres", "chrono", "runtime-tokio-native-tls"] }
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
