[package]
name = "lemonsqueezy-store-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
derive = "1.0.0"
dotenvy = "0.15.7"
eyre = "0.6.8"
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
hyper = "0.14.27"
jsonwebtoken = "9.1.0"
lemonsqueezy = { git = 'https://github.com/sumoduduk/lemonsqueezy.rs.git', branch = 'fix_checkout_data'  }
serde = "1.0.190"
serde_json = "1.0.108"
sha2 = "0.10.8"
sqlx = { version = "0.7.2", features = ["postgres", "chrono", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors", "util", "map-request-body"] }
uuid = { version = "1.5.0", features = ["serde", "v4" ] }


[profile.release]
strip = true
opt-level = 2
lto  = true
codegen-units = 1
